# ChessEngine

./: CMakeLists.txt  README.md  board.cpp  board.cpp.backup  board.h  board_state.h  build_crash_safe.bat  chess_engine_tester.html  common.h  compile_errors.txt  crash_safe_server.cpp  engine.cpp  engine.h  engine_bridge.cpp  engine_server.cpp  epd_tester.h  game.cpp  game.h  main.cpp  main.h  perft.cpp  perft.h  piece.cpp  piece.h  piece_types.cpp  piece_types.h  progressive_engine.cpp  real_engine_server.cpp  simple.c  simple_server_backup.cpp  tactical_tests.cpp  tactical_tests.h  test.cpp  test_fen.cpp  transposition.cpp  transposition.h  uci.cpp  uci.h  ui.cpp  ui.h  (+2 more)
testtest/: MainScript.js
